--- a/deployment/efs-to-efs-restore.template
+++ b/deployment/efs-to-efs-restore.template
@@ -195,8 +195,8 @@ Resources:
           Fn::Base64: !Sub |
             #!/bin/bash
 
-            wget https://s3.amazonaws.com/%TEMPLATE_BUCKET_NAME%/efs-backup/latest/efs-ec2-restore.sh -P /home/ec2-user
-            wget https://s3.amazonaws.com/%TEMPLATE_BUCKET_NAME%/efs-backup/latest/efs-restore-fpsync.sh -P /home/ec2-user
+            wget %TEMPLATE_BUCKET_URL%/efs-backup/latest/efs-ec2-restore.sh -P /home/ec2-user
+            wget %TEMPLATE_BUCKET_URL%/efs-backup/latest/efs-restore-fpsync.sh -P /home/ec2-user
 
             chmod a+x /home/ec2-user/efs-ec2-restore.sh
             chmod a+x /home/ec2-user/efs-restore-fpsync.sh
